tests/fail/semantics/missing_content/main.kira
construct Widget {
    annotations {
        @State;
    }

    requires {
        content;
    }
}

Widget Card() {
}
